[package]
name = "csgo-item"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
prettytable-rs = "^0.10"
urlencoding = "2.1.3"
csv = "1.1"
clap = { version = "4.3.19", features = ["derive"] }
